--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div class="login-container">
-        <h2>Inloggen bij School</h2>
+        <h2>Inloggen examenactie</h2>
         <form onsubmit="return login()">
             <input type="text" id="username" placeholder="Gebruikersnaam" required>
             <input type="password" id="password" placeholder="Wachtwoord" required>
