--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         function login() {
             let user = document.getElementById("username").value;
             let pass = document.getElementById("password").value;
-           
+
+            window.location.href = "homepage.html"
 
            
 
