--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <form onsubmit="return login()">
             <input type="text" id="username" placeholder="Gebruikersnaam" required>
             <input type="password" id="password" placeholder="Wachtwoord" required>
-            <button type="submit">Inloggen</button>
+            <a href='homepage.html'><button type="submit">Inloggen</button></a>
         </form>
         <p id="message" style="color: red;"></p>
     </div>
@@ -57,7 +57,7 @@
             let user = document.getElementById("username").value;
             let pass = document.getElementById("password").value;
 
-            window.location.href = "homepage.html"
+
 
            
 
