--- a/homepage.html
+++ b/homepage.html
@@ -45,8 +45,8 @@
 </head>
 <body onload="volgendeWeekDonderdag()">
     <div class="container">
-        <h1>Wachten op de uitslag...</h1>
-        <p>Je moet wachten tot volgende week donderdag (<span id="datum"></span>) om te weten of je de iPad hebt gewonnen!</p>
+        <h1>Je bent succesvol aangemeld!</h1>
+        <p>Je hoort volgende week donderdag (<span id="datum"></span>) of je de iPad hebt gewonnen!</p>
     </div>
 </body>
 </html>
